# rigcraft

./: dependencies.txt  package-lock.json  shell.nix
[component_name]/: ComponentContainer.svelte
backend/: db.sqlite3  pyproject.toml
backend/builds/: admin.py  models.py  serializers.py  urls.py  views.py
backend/builds/migrations/: 0001_initial.py  0002_alter_buildmodel_options_and_more.py
backend/component_category/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/component_category/migrations/: 0001_initial.py  0002_alter_componentcategorymodel_component_category_name.py
backend/components/: admin.py  models.py  serializers.py  urls.py  views.py
backend/components/migrations/: 0001_initial.py  0002_componentmemorymodel.py  0003_componentgpumodel.py  0004_componentgpumodel_component_gpu_image.py  0005_bookmark.py  0006_delete_bookmark.py
backend/core/: settings.py  urls.py
backend/users/: models.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_userprofile_bio_and_more.py  0002_alter_userprofile_options_alter_userprofile_bio_and_more.py
frontend/: package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: Footer.svelte  Navbar.svelte  api.js
frontend/src/lib/apis/: build-api.js  category-api.js  component-api.js  user-api.js
frontend/src/lib/assets/: homeBuildsImages.js
frontend/src/lib/components/: Footer.svelte  Navbar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  +page.svelte.bak
(+59 files in other folders)
